--- a/MetaMorpheusSetup/Product.wxs
+++ b/MetaMorpheusSetup/Product.wxs
@@ -32,12 +32,16 @@
       <ComponentGroupRef Id="ExecutablesAndLibrariesComponentGroup" />
       <ComponentGroupRef Id="src_Mods_files" />
       <ComponentGroupRef Id="src_Data_files" />
+      <ComponentGroupRef Id="src_NeoData_files" />
+      <ComponentGroupRef Id="src_NeoTomlFiles_files" />
       <!--ComponentRef creates a reference to a Component element in another Fragment-->
       <ComponentRef Id="MetaMorpheusProgramMenuFolderComponent"/>
       <!--App Data Section-->
       
       <ComponentGroupRef Id="Appsrc_Mods_files"/>
       <ComponentGroupRef Id="Appsrc_Data_files"/>
+      <ComponentGroupRef Id="Appsrc_NeoData_files" />
+      <ComponentGroupRef Id="Appsrc_NeoTomlFiles_files" />
       <ComponentRef Id="MetaAppsettings.toml"/>
       <ComponentRef Id="MetaAppGUIsettings.toml"/>
       <ComponentRef Id="RomoveApp"/>
@@ -60,6 +64,10 @@
         <Directory Id="MetaMorpheusInstallFolder" Name="MetaMorpheus">
           <Directory Id="DataFolder" Name="Data" />
           <Directory Id="ModsFolder" Name="Mods" />
+          <Directory Id="NeoFolder" Name="Neo">
+            <Directory Id="NeoDataFolder" Name="Data" />
+            <Directory Id="NeoTomlFilesFolder" Name="TomlFiles" />
+          </Directory>
         </Directory>
       </Directory>
       <Directory Id="ProgramMenuFolder">
@@ -85,6 +93,10 @@
           </Component>
           <Directory Id="MetaAppDataFolder" Name="Data" />
           <Directory Id="MetaAppModsFolder" Name="Mods" />
+          <Directory Id="NeoAppFolder" Name="Neo">
+            <Directory Id="MetaAppNeoDataFolder" Name="Data" />
+            <Directory Id="MetaAppNeoTomlFilesFolder" Name="TomlFiles" />
+          </Directory>
         </Directory>
       </Directory>
     </Directory>
@@ -366,10 +378,10 @@
         <File Id="src_NeoData_SearchTaskDecoyconfig.toml" Name="SearchTaskDecoyconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskDecoyconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskTargetconfig.toml" Guid="6c4b4f72-f785-48fb-b675-b71f31d6c4d8">
-        <File Id="src_NeoData_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig" />
+        <File Id="src_NeoData_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskTransconfig" Guid="873e68e0-fddc-475e-b6f7-dcdedb80d74b">
-        <File Id="src_NeoData_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig" />
+        <File Id="src_NeoData_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig.toml" />
       </Component>
     </ComponentGroup>
   </Fragment>
@@ -473,17 +485,17 @@
       <Component Id="Appsrc_Neo_combos.txt" Guid="a2c2bec9-86f3-4969-a1fa-44290e98ea08">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_amino_acids.tsv" Name="amino_acids.tsv" Source="$(var.GUI_TargetDir)Neo\Data\amino_acids.tsv" />
+        <File ReadOnly="no" Id="Appsrc_NeoData_amino_acids.tsv" Name="amino_acids.tsv" Source="$(var.GUI_TargetDir)Neo\Data\amino_acids.tsv" />
       </Component>
       <Component Id="Appsrc_NeoData_Dictionary1.txt" Guid="88a37ee8-b6b4-47c2-8e3f-d197a28cacc1">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_Dictionary1.txt" Name="Dictionary1.txt" Source="$(var.GUI_TargetDir)Neo\Data\Dictionary1.txt" />
+        <File ReadOnly="no" Id="Appsrc_NeoData_Dictionary1.txt" Name="Dictionary1.txt" Source="$(var.GUI_TargetDir)Neo\Data\Dictionary1.txt" />
       </Component>
       <Component Id="Appsrc_NeoData_Dictionary2.txt" Guid="cd4484ee-dc05-4d92-9dff-5a61c9086478">
                 <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_Dictionary2.txt" Name="Dictionary2.txt" Source="$(var.GUI_TargetDir)Neo\Data\Dictionary2.txt" />
+        <File ReadOnly="no" Id="Appsrc_NeoData_Dictionary2.txt" Name="Dictionary2.txt" Source="$(var.GUI_TargetDir)Neo\Data\Dictionary2.txt" />
       </Component>
     </ComponentGroup>
   </Fragment>
@@ -491,45 +503,45 @@
   <!--Builds the App Neo\TomlFiles folder-->
   <Fragment>
     <ComponentGroup Id="Appsrc_NeoTomlFiles_files" Directory="NeoTomlFilesFolder">
-      <Component Id="src_Neo_CalibrationTaskconfig.toml" Guid="70cdcf7f-14f6-460c-9b4f-89697864c390">
+      <Component Id="Appsrc_NeoTF_CalibrationTaskconfig.toml" Guid="70cdcf7f-14f6-460c-9b4f-89697864c390">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_CalibrationTaskconfig.toml" Name="CalibrationTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\CalibrationTaskconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_CalibrationTaskconfig.toml" Name="CalibrationTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\CalibrationTaskconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_CalibrationTaskconfig.toml" Guid="6b845244-5c12-4e57-92fb-31b371e5d6e2">
+      <Component Id="Appsrc_NeoTF_GptmdTaskconfig.toml" Guid="6b845244-5c12-4e57-92fb-31b371e5d6e2">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_GptmdTaskconfig.toml" Name="GptmdTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\GptmdTaskconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_GptmdTaskconfig.toml" Name="GptmdTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\GptmdTaskconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskCconfig.toml" Guid="271ec25f-722f-4cda-a177-674551406703">
+      <Component Id="Appsrc_NeoTF_SearchTaskCconfig.toml" Guid="271ec25f-722f-4cda-a177-674551406703">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskCconfig.toml" Name="SearchTaskCconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskCconfig.toml" Name="SearchTaskCconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskNconfig.toml" Guid="3ae27d78-9759-4cc8-9efc-9efb932615c4">
+      <Component Id="Appsrc_NeoTF_SearchTaskNconfig.toml" Guid="3ae27d78-9759-4cc8-9efc-9efb932615c4">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskNconfig.toml" Name="SearchTaskNconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskNconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskNconfig.toml" Name="SearchTaskNconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskNconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskCisconfig.toml" Guid="068f3634-9287-470f-8050-b1273ae8402d">
+      <Component Id="Appsrc_NeoTF_SearchTaskCisconfig.toml" Guid="068f3634-9287-470f-8050-b1273ae8402d">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskCisconfig.toml" Name="SearchTaskCisconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCisconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskCisconfig.toml" Name="SearchTaskCisconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCisconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskDecoyconfig.toml" Guid="c039ffdd-3ac4-439d-ab8c-4917cb0e9dbd">
+      <Component Id="Appsrc_NeoTF_SearchTaskDecoyconfig.toml" Guid="c039ffdd-3ac4-439d-ab8c-4917cb0e9dbd">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskDecoyconfig.toml" Name="SearchTaskDecoyconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskDecoyconfig.toml" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskDecoyconfig.toml" Name="SearchTaskDecoyconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskDecoyconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskTargetconfig.toml" Guid="10bf577c-9bb7-4f4e-bf44-d3fb4eee7dc2">
+      <Component Id="Appsrc_NeoTF_SearchTaskTargetconfig.toml" Guid="10bf577c-9bb7-4f4e-bf44-d3fb4eee7dc2">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig.toml" />
       </Component>
-      <Component Id="Appsrc_Neo_SearchTaskTransconfig" Guid="477a0f61-c449-41d4-baaf-039f568f10f6">
+      <Component Id="Appsrc_NeoTF_SearchTaskTransconfig" Guid="477a0f61-c449-41d4-baaf-039f568f10f6">
         <Condition>OVERWRITEAPPDATA</Condition>
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <File ReadOnly="no" Id="src_NeoData_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig" />
+        <File ReadOnly="no" Id="Appsrc_NeoTF_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig.toml" />
       </Component>
     </ComponentGroup>
   </Fragment>
