--- a/MetaMorpheusSetup/Product.wxs
+++ b/MetaMorpheusSetup/Product.wxs
@@ -42,9 +42,10 @@
       <ComponentGroupRef Id="Appsrc_Data_files"/>
       <ComponentGroupRef Id="Appsrc_NeoData_files" />
       <ComponentGroupRef Id="Appsrc_NeoTomlFiles_files" />
+      <ComponentRef Id="RemoveNeo"/>
       <ComponentRef Id="MetaAppsettings.toml"/>
       <ComponentRef Id="MetaAppGUIsettings.toml"/>
-      <ComponentRef Id="RomoveApp"/>
+      <ComponentRef Id="RemoveApp"/>
       <ComponentRef Id="DesktopShortcut"/>
     </Feature>
    
@@ -87,16 +88,19 @@
             <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
             <File Id="GUIsettings.toml" Name="GUIsettings.toml" Source="$(var.GUI_TargetDir)GUIsettings.toml" />
           </Component>
-          <Component Id="RomoveApp" Guid="a5443b89-65b0-4855-b521-e7bcc9c5a85c">
+          <Component Id="RemoveApp" Guid="a5443b89-65b0-4855-b521-e7bcc9c5a85c">
             <RemoveFolder Id="MetaMorpheusAppFolder" On="uninstall"/>
             <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
           </Component>
           <Directory Id="MetaAppDataFolder" Name="Data" />
           <Directory Id="MetaAppModsFolder" Name="Mods" />
           <Directory Id="NeoAppFolder" Name="Neo">
-            <Directory Id="MetaAppNeoDataFolder" Name="Data" />
+            <Directory Id="MetaAppNeoDataFolder" Name="NeoData" />
             <Directory Id="MetaAppNeoTomlFilesFolder" Name="TomlFiles" />
-          </Directory>
+            <Component Id="RemoveNeo" Guid="af5ff12f-ef0c-4945-be30-36c00ea734e9">
+              <RemoveFolder Id="NeoAppFolder" On="uninstall"/>
+              <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
+            </Component>          </Directory>
         </Directory>
       </Directory>
     </Directory>
@@ -360,28 +364,28 @@
   <Fragment>
     <ComponentGroup Id="src_NeoTomlFiles_files" Directory="NeoTomlFilesFolder">
       <Component Id="src_Neo_CalibrationTaskconfig.toml" Guid="a88c4a64-74b7-4de7-9ec3-c5c3a3060fb9">
-        <File Id="src_NeoData_CalibrationTaskconfig.toml" Name="CalibrationTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\CalibrationTaskconfig.toml" />
+        <File Id="src_NeoTF_CalibrationTaskconfig.toml" Name="CalibrationTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\CalibrationTaskconfig.toml" />
       </Component>
       <Component Id="src_Neo_GptmdTaskconfig.toml" Guid="e2f37df8-69c8-45f8-bef8-7029ac33f215">
-        <File Id="src_NeoData_GptmdTaskconfig.toml" Name="GptmdTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\GptmdTaskconfig.toml" />
+        <File Id="src_NeoTF_GptmdTaskconfig.toml" Name="GptmdTaskconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\GptmdTaskconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskCconfig.toml" Guid="d02dcedd-29d6-4e00-83c8-da8274eab1e4">
-        <File Id="src_NeoData_SearchTaskCconfig.toml" Name="SearchTaskCconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskCconfig.toml" Name="SearchTaskCconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskNconfig.toml" Guid="f45b79f5-c2c9-4fb9-a9bb-949a8a05ef5a">
-        <File Id="src_NeoData_SearchTaskNconfig.toml" Name="SearchTaskNconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskNconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskNconfig.toml" Name="SearchTaskNconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskNconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskCisconfig.toml" Guid="39a56967-6a90-4e9f-a06a-b689d83feceb">
-        <File Id="src_NeoData_SearchTaskCisconfig.toml" Name="SearchTaskCisconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCisconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskCisconfig.toml" Name="SearchTaskCisconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskCisconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskDecoyconfig.toml" Guid="36e63f8b-4b29-408c-83ea-7c670f037c58">
-        <File Id="src_NeoData_SearchTaskDecoyconfig.toml" Name="SearchTaskDecoyconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskDecoyconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskDecoyconfig.toml" Name="SearchTaskDecoyconfig.toml" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskDecoyconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskTargetconfig.toml" Guid="6c4b4f72-f785-48fb-b675-b71f31d6c4d8">
-        <File Id="src_NeoData_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskTargetconfig" Name="SearchTaskTargetconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTargetconfig.toml" />
       </Component>
       <Component Id="src_Neo_SearchTaskTransconfig" Guid="873e68e0-fddc-475e-b6f7-dcdedb80d74b">
-        <File Id="src_NeoData_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig.toml" />
+        <File Id="src_NeoTF_SearchTaskTransconfig" Name="SearchTaskTransconfig" Source="$(var.GUI_TargetDir)Neo\TomlFiles\SearchTaskTransconfig.toml" />
       </Component>
     </ComponentGroup>
   </Fragment>
@@ -475,12 +479,11 @@
         <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
         <File ReadOnly="no" Id="Appsrc_Data_proteases.tsv" Name="proteases.tsv" Source="$(var.GUI_TargetDir)Data\proteases.tsv" />
       </Component>
-
     </ComponentGroup>
   </Fragment>
 
   <!--Builds the App Neo\Data folder-->
-  <Fragment>
+  <Fragment>      
     <ComponentGroup Id="Appsrc_NeoData_files" Directory="MetaAppNeoDataFolder">
       <Component Id="RemoveNeoData" Guid="a453b2c1-f11d-4953-8a21-c1cdd20e9fea">
         <Condition>OVERWRITEAPPDATA</Condition>
@@ -504,9 +507,9 @@
       </Component>
     </ComponentGroup>
   </Fragment>
-
+  
   <!--Builds the App Neo\TomlFiles folder-->
-  <Fragment>
+    <Fragment>
     <ComponentGroup Id="Appsrc_NeoTomlFiles_files" Directory="MetaAppNeoTomlFilesFolder">
       <Component Id="RemoveNeoTomlFiles" Guid="269e9408-f6ff-4bc8-991a-ba3abe65b212">
         <Condition>OVERWRITEAPPDATA</Condition>
@@ -556,16 +559,7 @@
     </ComponentGroup>
   </Fragment>
 
-  <!--Builds the App Neo folder-->
-  <Fragment>
-    <ComponentGroup Id="Appsrc_Neo_files" Directory="NeoAppFolder">
-      <Component Id="RemoveNeo" Guid="5eda1c10-145c-4417-9709-0debb569017d">
-        <Condition>OVERWRITEAPPDATA</Condition>
-        <RemoveFolder Id="NeoAppFolder" On="both"/>
-        <RegistryValue Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-      </Component>
-    </ComponentGroup>
-  </Fragment>
+
 
   <!--MetaMorpheus Program Menu Folder and Registry Key-->
   <Fragment>
